--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aws-ses-serverless-example",
   "version": "0.0.1",
-  "description": "AWS SES example in NodeJS using lambda",
+  "description": "Aws SES example + nodejs v12 + serverless.js deployment",
   "main": "handler.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,20 +9,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.6.8",
-    "babel-runtime": "^6.11.6"
+    "aws-sdk": "^2.585.0",
+    "source-map-support": "^0.5.16"
   },
   "devDependencies": {
-    "babel-core": "^6.17.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.16.0",
-    "eslint": "^3.8.0",
-    "json-loader": "^0.5.4",
-    "request": "^2.81.0",
-    "serverless-webpack": "^1.0.0-rc.2",
-    "webpack": "^1.13.2"
+    "@babel/cli": "^7.7.5",
+    "@babel/core": "^7.7.5",
+    "@babel/preset-env": "^7.7.5",
+    "babel-eslint": "^8.0.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-source-map-support": "^2.1.1",
+    "eslint": "^6.7.2",
+    "json-loader": "^0.5.7",
+    "serverless-local-environment": "^0.3.0",
+    "serverless-offline": "^5.12.1",
+    "serverless-sam": "^0.2.0",
+    "serverless-webpack": "^5.3.1",
+    "webpack": "^4.41.2",
+    "webpack-node-externals": "^1.7.2"
   }
 }
