--- a/serverless.yml
+++ b/serverless.yml
@@ -1,13 +1,30 @@
-service: aws-ses-serverless-example
+service: '${self:custom.project_name}-aws-ses-serverless-nodejs12'
+
+custom:
+  environment: ${opt:environment, 'dev'}
+  aws_region: ${opt:awsregion}
+  project_name: ${opt:projectname, ''}
 
 provider:
   name: aws
-  runtime: nodejs6.10
-  stage: development
-  region: ap-northeast-1
+  runtime: nodejs12.x
+  stage: ${self:custom.environment}
+  region: ${self:custom.aws_region}
+  iamRoleStatements:
+    - Effect: Allow
+      Resource: "*"
+      Action:
+        - ses:SendEmail
+        - ses:SendRawEmail
+        - logs:CreateLogGroup
+        - logs:CreateLogStream
+        - logs:PutLogEvents
 
 plugins:
   - serverless-webpack
+  - serverless-offline
+  - serverless-local-environment
+  - serverless-sam
 
 functions:
   sendMail:
@@ -15,6 +32,8 @@ functions:
     description: Send email using SES service.
     memorySize: 1024
     timeout: 5
+    environment:
+      REGION: ${self:custom.aws_region}
     events:
       - http:
           path: sendMail
